added variables, PBR material and a HUD
added PBR brickwall material

added variables for MyPoints, Health, and ShotsFired

added BP to collect points and health

added an on-screen menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -156,4 +156,6 @@ bExplicitCanvasChildZOrder=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bPackageDataInsideApk=True
+TargetSDKVersion=29
+PackageName=gc.mdev1003.[PROJECT]
 
